--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=uni_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/uni_db
 spring.datasource.username=postgres
-spring.datasource.password=rakib123
+spring.datasource.password=newpassword
 
 #Configure JPA
 spring.jpa.generate-ddl=true
@@ -11,3 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Redis configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# Enable caching
+spring.cache.type=redis
